[gd_scene load_steps=22 format=3 uid="uid://covp08gbfgtsi"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_6q2pv"]
[ext_resource type="PackedScene" uid="uid://dl1edwake2lg4" path="res://scenes/snake_segment.tscn" id="2_k0oat"]
[ext_resource type="PackedScene" uid="uid://dacuovia1j4ei" path="res://scenes/hud.tscn" id="3_dm3qm"]
[ext_resource type="Texture2D" uid="uid://b5wbnkwkdfnww" path="res://assets/DoomSnakeGrassTileset.png" id="3_od7tq"]
[ext_resource type="Texture2D" uid="uid://cprfk4ehf201m" path="res://icon.svg" id="4_c6u0s"]
[ext_resource type="Texture2D" uid="uid://vu6i86jc7le0" path="res://assets/DoomSnakeFenceVariants.png" id="4_kcwuv"]
[ext_resource type="Texture2D" uid="uid://d15v5qinsjcdi" path="res://assets/apple.png" id="5_yoqqq"]
[ext_resource type="PackedScene" uid="uid://c5c00hvgtwva" path="res://scenes/game_over_menu.tscn" id="6_vriwy"]
[ext_resource type="Shader" path="res://scenes/screenDistortion.gdshader" id="7_ukksw"]
[ext_resource type="AudioStream" uid="uid://crocksmq6qb75" path="res://assets/SFX/apple_crunch.wav" id="10_qdaby"]
[ext_resource type="AudioStream" uid="uid://i803uidhy1cy" path="res://assets/Music/BackroomsSnake_2DTheme.mp3" id="11_oskpg"]
[ext_resource type="AudioStream" uid="uid://b8h7ugketrt0j" path="res://assets/SFX/game_over.wav" id="12_p020k"]

[sub_resource type="TileMapPattern" id="TileMapPattern_5osb4"]
tile_data = PackedInt32Array(0, 65536, 131072, 65536, 65536, 262144, 131072, 65536, 262144, 196608, 65536, 196608, 1, 65536, 65536, 65537, 65536, 196608, 131073, 65536, 131072, 196609, 65536, 65536, 2, 65536, 262144, 65538, 65536, 131072, 131074, 65536, 131072, 196610, 65536, 65536, 3, 65536, 196608, 65539, 65536, 131072, 131075, 65536, 196608, 196611, 65536, 262144)

[sub_resource type="TileMapPattern" id="TileMapPattern_5dy8l"]
tile_data = PackedInt32Array(0, 131072, 0, 65536, 131072, 131072, 1, 131072, 65536, 65537, 131072, 196608)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v1h8s"]
texture = ExtResource("3_od7tq")
texture_region_size = Vector2i(10, 10)
0:0/0 = 0
0:1/next_alternative_id = 4
0:1/0 = 0
0:1/1 = 1
0:1/1/flip_h = true
0:1/2 = 2
0:1/2/flip_v = true
0:1/3 = 3
1:0/next_alternative_id = 9
1:0/0 = 0
1:0/1 = 1
1:0/1/flip_v = true
1:0/2 = 2
1:0/2/flip_h = true
1:0/3 = 3
1:0/3/flip_h = true
1:0/3/flip_v = true
1:0/4 = 4
1:0/6 = 6
1:0/6/flip_h = true
1:0/7 = 7
1:0/7/flip_v = true
1:1/next_alternative_id = 4
1:1/0 = 0
1:1/1 = 1
1:1/1/flip_v = true
1:1/2 = 2
1:1/2/flip_h = true
1:1/2/flip_v = true
1:1/3 = 3
1:1/3/flip_h = true
2:1/next_alternative_id = 4
2:1/0 = 0
2:1/1 = 1
2:1/1/flip_v = true
2:1/2 = 2
2:1/2/flip_h = true
2:1/2/flip_v = true
2:1/3 = 3
2:1/3/flip_h = true
2:0/next_alternative_id = 5
2:0/0 = 0
2:0/1 = 1
2:0/1/flip_h = true
2:0/1/flip_v = true
2:0/2 = 2
2:0/2/flip_h = true
2:0/3 = 3
2:0/3/flip_v = true
3:0/0 = 0
4:0/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
6:0/0 = 0
5:0/0 = 0
3:1/0 = 0
7:1/0 = 0
7:0/0 = 0

[sub_resource type="TileSet" id="TileSet_fv3g5"]
tile_size = Vector2i(10, 10)
sources/0 = SubResource("TileSetAtlasSource_v1h8s")
pattern_0 = SubResource("TileMapPattern_5osb4")
pattern_1 = SubResource("TileMapPattern_5dy8l")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jp5m2"]
texture = ExtResource("4_kcwuv")
texture_region_size = Vector2i(10, 10)
0:0/next_alternative_id = 5
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/flip_v = true
0:0/2 = 2
0:0/2/flip_h = true
0:0/3 = 3
0:0/3/flip_v = true
1:0/next_alternative_id = 5
1:0/0 = 0
1:0/1 = 1
1:0/1/flip_h = true
1:0/1/flip_v = true
1:0/2 = 2
1:0/2/flip_h = true
1:0/4 = 4
1:0/4/flip_v = true
2:0/next_alternative_id = 3
2:0/0 = 0
2:0/1 = 1
2:0/1/flip_v = true
2:0/2 = 2
2:0/2/flip_h = true
2:0/2/flip_v = true
3:0/next_alternative_id = 2
3:0/0 = 0
3:0/1 = 1
3:0/1/flip_h = true
3:0/1/flip_v = true
0:1/next_alternative_id = 4
0:1/0 = 0
0:1/1 = 1
0:1/1/flip_h = true
0:1/1/flip_v = true
0:1/2 = 2
0:1/2/flip_v = true
0:1/3 = 3
2:1/0 = 0
1:1/next_alternative_id = 2
1:1/0 = 0
1:1/1 = 1
1:1/1/flip_h = true
1:1/1/flip_v = true
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_nke87"]
tile_size = Vector2i(10, 10)
sources/0 = SubResource("TileSetAtlasSource_jp5m2")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jj8x2"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kowoo"]
width = 50
height = 1000
seamless = true
seamless_blend_skirt = 0.594
bump_strength = 32.0
noise = SubResource("FastNoiseLite_jj8x2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dx4kc"]
shader = ExtResource("7_ukksw")
shader_parameter/scrollRate = Vector2(0.065, -0.045)
shader_parameter/distortionTexture = SubResource("NoiseTexture2D_kowoo")

[node name="Main" type="Node"]
script = ExtResource("1_6q2pv")
snake_scene = ExtResource("2_k0oat")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.870588, 0.768627, 0.223529, 1)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(500, 550)
scale = Vector2(5, 5)
tile_set = SubResource("TileSet_fv3g5")
cell_quadrant_size = 10
format = 2
layer_0/tile_data = PackedInt32Array(-3, 327680, 1, -589834, 65536, 131072, -524298, 131072, 131073, -458762, 65536, 262144, -393226, 65536, 196608, -589833, 65536, 65536, -524297, 131072, 1, -458761, 196608, 0, -393225, 196608, 1, -589832, 65536, 262144, -524296, 65536, 131072, -458760, 262144, 0, -393224, 393216, 1, -589831, 65536, 196608, -524295, 65536, 131072, -458759, 327680, 0, -393223, 327680, 1, -589830, 65536, 131072, -524294, 65536, 262144, -458758, 393216, 0, -393222, 393216, 1, -589829, 65536, 65536, -524293, 65536, 196608, -458757, 65536, 131072, -393221, 458752, 1, -589828, 65536, 262144, -524292, 65536, 131072, -458756, 65536, 65537, -393220, 65536, 65536, -589827, 65536, 196608, -524291, 65536, 131072, -458755, 0, 0, -393219, 0, 131073, -589826, 65536, 131072, -524290, 65536, 262144, -458754, 65536, 196608, -393218, 0, 0, -589825, 65536, 65536, -524289, 65536, 196608, -458753, 65536, 131072, -393217, 65536, 262144, -655360, 65536, 262144, -589824, 65536, 131072, -524288, 65536, 65536, -458752, 65536, 196608, -655359, 65536, 196608, -589823, 65536, 131072, -524287, 65536, 262144, -458751, 65536, 131072, -655358, 65536, 131072, -589822, 65536, 262144, -524286, 65536, 196608, -458750, 65536, 131072, -655357, 65536, 65536, -589821, 65536, 196608, -524285, 65536, 131072, -458749, 65536, 131072, -655356, 65536, 262144, -589820, 65536, 131072, -524284, 65536, 131072, -458748, 65536, 65536, -655355, 65536, 196608, -589819, 65536, 131072, -524283, 65536, 1, -458747, 65536, 262144, -655354, 65536, 131072, -589818, 65536, 262144, -524282, 0, 1, -458746, 65536, 196608, -655353, 65536, 65536, -589817, 65536, 196608, -524281, 65536, 131072, -458745, 65536, 65536, -655352, 65536, 262144, -589816, 65536, 131072, -524280, 65536, 131072, -458744, 65536, 65536, -655351, 65536, 196608, -589815, 65536, 131072, -524279, 65536, 196608, -458743, 65536, 262144, -327690, 65536, 131072, -262154, 65536, 262144, -196618, 65536, 262144, -131082, 65536, 196608, -327689, 65536, 65536, -262153, 65536, 196608, -196617, 65536, 131072, -131081, 65536, 65536, -327688, 131072, 131072, -262152, 65536, 262144, -196616, 131072, 131073, -131080, 65536, 196608, -327687, 65536, 1, -262151, 0, 0, -196615, 131072, 65536, -131079, 65536, 65536, -65546, 65536, 131072, -10, 65536, 65537, 65526, 131072, 196609, 131062, 65536, 196608, -65545, 65536, 65536, -9, 131072, 131072, 65527, 65536, 131073, 131063, 65536, 65536, -65544, 65536, 262144, -8, 65536, 131072, 65528, 131072, 196608, 131064, 131072, 131072, -65543, 65536, 196608, -7, 65536, 131072, 65529, 65536, 196608, 131065, 65536, 65536, -65542, 65536, 131072, -6, 65536, 262144, 65530, 65536, 262144, 131066, 65536, 262144, -65541, 65536, 65536, -5, 65536, 196608, 65531, 65536, 131072, 131067, 65536, 196608, -65540, 65536, 262144, -4, 262144, 1, 65532, 65536, 131072, 131068, 65536, 262144, -65539, 327680, 0, 65533, 65536, 65536, 131069, 65536, 196608, 196598, 65536, 131072, 262134, 65536, 262144, 327670, 65536, 262144, 393206, 65536, 131072, 196599, 65536, 131072, 393207, 65536, 65536, 196600, 65536, 65536, 393208, 131072, 0, 196601, 65536, 458752, 262137, 65536, 131072, 327673, 65536, 131072, 393209, 65536, 196608, 196602, 65536, 196608, 262138, 131072, 196608, 327674, 131072, 131072, 393210, 65536, 262144, 196603, 131072, 131073, 262139, 196608, 0, 327675, 196608, 1, 393211, 65536, 65536, 196604, 131072, 196608, 262140, 262144, 0, 327676, 262144, 1, 393212, 131072, 65536, 196605, 65536, 131072, 262141, 327680, 0, 327677, 327680, 1, 393213, 65536, 196609, 196606, 65536, 131072, 262142, 393216, 0, 327678, 65536, 262144, 393214, 65536, 196608, 196607, 65536, 196608, 262143, 65536, 262144, 327679, 65536, 131072, 393215, 65536, 65537, 131072, 65536, 131072, 196608, 131072, 131073, 262144, 0, 131073, 327680, 131072, 65537, 131073, 65536, 65536, 196609, 65536, 196608, 262145, 131072, 196609, 327681, 131072, 65536, -65538, 393216, 0, -2, 131072, 65536, 65534, 65536, 262144, 131070, 65536, 131072, -65537, 131072, 196608, -1, 65536, 196608, 65535, 65536, 196608, 131071, 65536, 131072, -131072, 65536, 131072, -65536, 65536, 65536, 0, 65536, 131072, 65536, 65536, 65536, -131071, 131072, 65536, -65535, 65536, 65536, 1, 65536, 196608, 65537, 65536, 262144, -327686, 65536, 262144, -262150, 131072, 196608, -196614, 131072, 196608, -131078, 65536, 65536, -131077, 65536, 262144, -131076, 65536, 65536, -131075, 65536, 262144, -327682, 65536, 131072, -262146, 65536, 196608, -196610, 65536, 262144, -131074, 65536, 196608, -327681, 65536, 262144, -262145, 196608, 0, -196609, 65536, 131072, -131073, 65536, 262144, -393216, 65536, 131072, -327680, 262144, 0, -262144, 262144, 1, -196608, 65536, 196608, -393215, 196608, 1, -327679, 65536, 65537, -262143, 327680, 1, -196607, 262144, 0, -393214, 327680, 0, -327678, 393216, 0, -262142, 65536, 131073, -196606, 196608, 1, -393213, 131072, 196608, -327677, 458752, 0, -262141, 458752, 1, -196605, 65536, 65536, -393212, 65536, 196608, -327676, 65536, 131072, -262140, 65536, 65536, -196604, 131072, 196608, -393211, 65536, 131072, -327675, 65536, 131072, -262139, 65536, 65536, -196603, 131072, 65536, -131070, 131072, 131072, -65534, 65536, 262144, 2, 65536, 262144, 65538, 65536, 196608, -131069, 65536, 65536, -65533, 65536, 196608, 3, 65536, 131072, 65539, 65536, 65536, -131068, 65536, 262144, -65532, 65536, 262144, 4, 65536, 196608, 65540, 65536, 65536, -131067, 131072, 131072, -65531, 65536, 131072, 5, 65536, 65536, 65541, 65536, 262144, -131066, 65536, 1, -65530, 131072, 131072, 6, 65536, 65536, 65542, 65536, 131072, -131065, 0, 131073, -65529, 0, 0, 7, 65536, 262144, 65543, 65536, 65536, -131064, 65536, 262144, -65528, 65536, 131072, 8, 65536, 131072, 65544, 65536, 262144, -131063, 65536, 196608, -65527, 65536, 131072, 9, 65536, 196608, 65545, 65536, 196608, 131074, 65536, 262144, 196610, 65536, 131072, 262146, 65536, 131072, 327682, 131072, 131072, 131075, 65536, 196608, 196611, 65536, 131072, 262147, 65536, 196608, 327683, 65536, 262144, 131076, 65536, 262144, 196612, 65536, 131072, 262148, 65536, 131072, 327684, 65536, 65536, 131077, 196608, 0, 196613, 196608, 1, 262149, 65536, 196608, 327685, 65536, 262144, 131078, 262144, 0, 196614, 458752, 0, 262150, 65536, 196608, 327686, 65536, 196608, 131079, 327680, 0, 196615, 393216, 1, 262151, 327680, 1, 327687, 65536, 65536, 131080, 65536, 131072, 196616, 393216, 0, 262152, 65536, 65536, 327688, 65536, 65536, 131081, 65536, 131072, 196617, 458752, 0, 262153, 458752, 1, 327689, 65536, 262144, -393210, 65536, 131072, -327674, 65536, 196608, -262138, 65536, 262144, -196602, 131072, 1, -393209, 65536, 65536, -327673, 65536, 196608, -262137, 131072, 131072, -196601, 131072, 65536, -393208, 65536, 262144, -327672, 65536, 131072, -262136, 65536, 131072, -196600, 65536, 65536, -393207, 65536, 196608, -327671, 65536, 131072, -262135, 65536, 196608, -196599, 65536, 262144, 458742, 65536, 262144, 524278, 65536, 262144, 589814, 65536, 196608, 655350, 65536, 196608, 458743, 65536, 196608, 524279, 65536, 131072, 589815, 65536, 65536, 655351, 65536, 65536, 458744, 65536, 131072, 524280, 65536, 131072, 589816, 65536, 65536, 655352, 65536, 65536, 458745, 0, 0, 524281, 65536, 196608, 589817, 65536, 262144, 655353, 65536, 262144, 458746, 131072, 1, 524282, 65536, 196609, 589818, 131072, 65536, 655354, 65536, 196608, 458747, 131072, 65536, 524283, 131072, 131072, 589819, 131072, 131072, 655355, 65536, 65536, 458748, 131072, 196608, 524284, 0, 1, 589820, 65536, 131073, 655356, 65536, 65537, 458749, 65536, 131072, 524285, 65536, 196608, 589821, 0, 131073, 655357, 131072, 1, 458750, 458752, 0, 524286, 131072, 131073, 589822, 65536, 131073, 655358, 65536, 196608, 458751, 327680, 1, 524287, 65536, 196608, 589823, 65536, 131072, 655359, 65536, 65536, 393216, 393216, 1, 458752, 65536, 131072, 524288, 65536, 131072, 589824, 65536, 65536, 393217, 458752, 1, 458753, 65536, 131072, 524289, 65536, 196608, 589825, 65536, 262144, 393218, 65536, 65536, 458754, 65536, 262144, 524290, 65536, 262144, 589826, 65536, 196608, 393219, 65536, 262144, 458755, 65536, 196608, 524291, 131072, 65536, 589827, 65536, 65536, 393220, 65536, 262144, 458756, 65536, 131072, 524292, 65536, 131072, 589828, 65536, 65536, 393221, 65536, 131072, 458757, 65536, 262144, 524293, 65536, 262144, 589829, 65536, 196608, 393222, 65536, 65536, 458758, 65536, 196608, 524294, 65536, 131072, 589830, 65536, 65536, 393223, 65536, 262144, 458759, 0, 0, 524295, 65536, 131072, 589831, 65536, 65536, 393224, 65536, 131073, 458760, 0, 65537, 524296, 131072, 196609, 589832, 65536, 262144, 393225, 131072, 65537, 458761, 65536, 131072, 524297, 65536, 196608, 589833, 65536, 262144, -327685, 65536, 262144, -262149, 65536, 262144, -196613, 65536, 196608, -327684, 65536, 196608, -262148, 65536, 131072, -196612, 65536, 65536, -327683, 65536, 131072, -262147, 65536, 131072, -196611, 65536, 65536, 262135, 131072, 0, 327671, 131072, 131072, 262136, 131072, 65536, 327672, 131072, 196608)

[node name="TileMap3" type="TileMap" parent="."]
position = Vector2(500, 550)
scale = Vector2(5, 5)
tile_set = SubResource("TileSet_nke87")
cell_quadrant_size = 10
format = 2
layer_0/tile_data = PackedInt32Array(-589834, 65536, 1, -589833, 131072, 0, -589832, 196608, 0, -589831, 131072, 0, -589830, 196608, 0, -589829, 131072, 0, -589828, 196608, 0, -589827, 131072, 0, -589826, 196608, 0, -589825, 131072, 0, -655359, 131072, 0, -655357, 131072, 0, -655355, 131072, 0, -655353, 131072, 0, -655352, 196608, 0, -655351, 0, 196609, -524298, 65536, 65536, -393226, 65536, 65536, -131082, 65536, 262144, -10, 65536, 262144, 131062, 65536, 262144, 262134, 65536, 262144, 393206, 65536, 262144, 524278, 65536, 262144, 458742, 0, 196608, 327670, 0, 196608, 196598, 0, 196608, 65526, 0, 196608, -65546, 0, 196608, -196618, 0, 196608, -327690, 0, 196608, -458762, 0, 196608, 589814, 0, 196608, 655350, 0, 65537, 655351, 196608, 65536, 655353, 196608, 65536, 655355, 196608, 65536, 655357, 196608, 65536, 655359, 196608, 65536, 589825, 196608, 65536, 589827, 196608, 65536, 589829, 196608, 65536, 589831, 196608, 65536, 589826, 131072, 131072, 589828, 131072, 131072, 589830, 131072, 131072, 589824, 131072, 131072, 655358, 131072, 131072, 655356, 131072, 131072, 655354, 131072, 131072, 655352, 131072, 131072, 589832, 131072, 131072, -589815, 0, 131072, -458743, 0, 131072, -327671, 0, 131072, -196599, 0, 131072, -65527, 0, 131072, 65545, 0, 131072, 196617, 0, 131072, 327689, 0, 131072, 524297, 65536, 131072, -262154, 65536, 262144, 589833, 65536, 65537, 458761, 0, 131072, 393225, 65536, 131072, 262153, 65536, 131072, 131081, 65536, 131072, 9, 65536, 131072, -131063, 65536, 131072, -262135, 65536, 131072, -393207, 65536, 131072, -524279, 65536, 131072, -655360, 196608, 0, -655358, 196608, 0, -655356, 196608, 0, -655354, 196608, 0)

[node name="DistortionLocation2" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_dx4kc")
position = Vector2(8, 552)
scale = Vector2(0.652346, 7.80469)
texture = ExtResource("4_c6u0s")

[node name="Hud" parent="." instance=ExtResource("3_dm3qm")]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.226

[node name="Food" type="Sprite2D" parent="."]
texture = ExtResource("5_yoqqq")
offset = Vector2(25, 25)

[node name="GameOverMenu" parent="." instance=ExtResource("6_vriwy")]
process_mode = 2
visible = false

[node name="apple_crunch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_qdaby")
volume_db = 11.243
pitch_scale = 0.89

[node name="twoDTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_oskpg")
volume_db = -15.928

[node name="game_over" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_p020k")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
